Simplify clinical data binning related SQL (#10823)
* simplify clinical data binning related SQL

* fix numericalClinicalDataCountFilter