@@ -1,7 +1,9 @@
 package org.cbioportal.web.columnar.util;
 
 import org.cbioportal.model.Binnable;
+import org.cbioportal.model.ClinicalData;
 import org.cbioportal.model.ClinicalDataBin;
+import org.cbioportal.model.ClinicalDataCount;
 import org.cbioportal.model.DataBin;
 import org.cbioportal.web.parameter.ClinicalDataBinCountFilter;
 import org.cbioportal.web.parameter.ClinicalDataBinFilter;
@@ -15,7 +17,6 @@ import java.util.List;
 import java.util.Map;
 
 import static java.util.Collections.emptyList;
-import static java.util.stream.Collectors.toList;
 
 public class NewClinicalDataBinUtil {
     public static StudyViewFilter removeSelfFromFilter(ClinicalDataBinCountFilter dataBinCountFilter) {
@@ -70,33 +71,21 @@ public class NewClinicalDataBinUtil {
         List<ClinicalDataBinFilter> attributes,
         Map<String, ClinicalDataType> attributeDatatypeMap,
         Map<String, List<Binnable>> unfilteredClinicalDataByAttributeId,
-        Map<String, List<Binnable>> filteredClinicalDataByAttributeId,
-        List<String> unfilteredUniqueSampleKeys,
-        List<String> unfilteredUniquePatientKeys,
-        List<String> filteredUniqueSampleKeys,
-        List<String> filteredUniquePatientKeys
+        Map<String, List<Binnable>> filteredClinicalDataByAttributeId
     ) {
         List<ClinicalDataBin> clinicalDataBins = new ArrayList<>();
 
         for (ClinicalDataBinFilter attribute : attributes) {
             if (attributeDatatypeMap.containsKey(attribute.getAttributeId())) {
-                ClinicalDataType clinicalDataType = attributeDatatypeMap.get(attribute.getAttributeId());
-                List<String> filteredIds = clinicalDataType == ClinicalDataType.PATIENT ? filteredUniquePatientKeys
-                    : filteredUniqueSampleKeys;
-                List<String> unfilteredIds = clinicalDataType == ClinicalDataType.PATIENT
-                    ? unfilteredUniquePatientKeys
-                    : unfilteredUniqueSampleKeys;
-
                 List<ClinicalDataBin> dataBins = dataBinner
-                    .calculateClinicalDataBins(attribute, clinicalDataType,
-                        filteredClinicalDataByAttributeId.getOrDefault(attribute.getAttributeId(),
-                            emptyList()),
-                        unfilteredClinicalDataByAttributeId.getOrDefault(attribute.getAttributeId(),
-                            emptyList()),
-                        filteredIds, unfilteredIds)
+                    .calculateClinicalDataBins(
+                        attribute,
+                        filteredClinicalDataByAttributeId.getOrDefault(attribute.getAttributeId(), emptyList()),
+                        unfilteredClinicalDataByAttributeId.getOrDefault(attribute.getAttributeId(), emptyList())
+                    )
                     .stream()
                     .map(dataBin -> dataBinToClinicalDataBin(attribute, dataBin))
-                    .collect(toList());
+                    .toList();
 
                 clinicalDataBins.addAll(dataBins);
             }
@@ -109,9 +98,7 @@ public class NewClinicalDataBinUtil {
         DataBinner dataBinner,
         List<ClinicalDataBinFilter> attributes,
         Map<String, ClinicalDataType> attributeDatatypeMap,
-        Map<String, List<Binnable>> filteredClinicalDataByAttributeId,
-        List<String> filteredUniqueSampleKeys,
-        List<String> filteredUniquePatientKeys
+        Map<String, List<Binnable>> filteredClinicalDataByAttributeId
     ) {
         List<ClinicalDataBin> clinicalDataBins = new ArrayList<>();
 
@@ -119,23 +106,46 @@ public class NewClinicalDataBinUtil {
 
             // if there is clinical data for requested attribute
             if (attributeDatatypeMap.containsKey(attribute.getAttributeId())) {
-                ClinicalDataType clinicalDataType = attributeDatatypeMap.get(attribute.getAttributeId());
-                List<String> filteredIds = clinicalDataType == ClinicalDataType.PATIENT
-                    ? filteredUniquePatientKeys
-                    : filteredUniqueSampleKeys;
-
                 List<ClinicalDataBin> dataBins = dataBinner
-                    .calculateDataBins(attribute, clinicalDataType,
-                        filteredClinicalDataByAttributeId.getOrDefault(attribute.getAttributeId(),
-                            emptyList()),
-                        filteredIds)
+                    .calculateDataBins(
+                        attribute,
+                        filteredClinicalDataByAttributeId.getOrDefault(attribute.getAttributeId(), emptyList())
+                    )
                     .stream()
                     .map(dataBin -> dataBinToClinicalDataBin(attribute, dataBin))
-                    .collect(toList());
+                    .toList();
                 clinicalDataBins.addAll(dataBins);
             }
         }
 
         return clinicalDataBins;
+    }
+
+    /**
+     * Generate a list of ClinicalData from the given data count instance.
+     * Size of the generated list is equal to 'dataCount.count',
+     * and each ClinicalData in the list contains the same value 'dataCount.value'
+     * 
+     * This method improves the performance of the data binning because it allows us to fetch only
+     * the clinical data counts data which is a lot more compact and faster to generated than the actual clinical data.
+     * We only need the attribute id and the value of the clinical data to generate data bins.
+     * Constructing the clinical data in memory by using clinical data counts significantly improves the performance,
+     * and it also allows us to use the exact same SQL used by the clinical data counts endpoint. 
+     * 
+     * @param dataCount ClinicalDataCount instance containing the count and the value
+     * @return  a list of ClinicalData with size 'dataCount.count' and value 'dataCount.value'
+     */
+    public static List<ClinicalData> generateClinicalDataFromClinicalDataCount(ClinicalDataCount dataCount)
+    {
+        List<ClinicalData> data = new ArrayList<>(dataCount.getCount());
+        
+        for (int i=0; i < dataCount.getCount(); i++) {
+            ClinicalData d = new ClinicalData();
+            d.setAttrId(dataCount.getAttributeId());
+            d.setAttrValue(dataCount.getValue());
+            data.add(d);
+        }
+        
+        return data;
     }
 }
